# call-calendar-backend

./: .dockerignore  .env.example  .env.tests  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.container.yml  docker-compose.local.yml  env_example  pyproject.toml  pytest.ini  requirements.txt
.helm/: Chart.yaml  values-prod.yaml
.helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  docker-registry.yaml  ingress.yaml  pv.yaml  pvc.yaml  service.yaml
backend/: app_start.sh  manage.py  test.py
backend/api/: admin.py  models.py
backend/api/migrations/: 0001_initial.py
backend/calendar_backend/: __init__.py  asgi.py  celery.py  constants.py  settings.py  urls.py  wsgi.py
backend/core/: constants.py  enums.py  exceptions.py  models.py
backend/core/middleware/: telegram_middleware.py
backend/event/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/event/migrations/: 0001_initial.py  0002_alter_event_calendar.py  0003_event_users.py  0004_remove_event_users_event_users.py  0005_alter_event_date_from_alter_event_date_till_and_more.py  0006_alter_calendar_key.py  0007_alter_event_users.py  0008_event_aiterus.py  0009_remove_event_calendar_event_calendar.py  0010_alter_event_calendar.py  0011_groupchat.py  0012_event_groups.py  0013_groupchat_calendar_show_time.py  0014_event_message.py  0015_sendedmessages.py  0016_alter_sendedmessages_event_and_more.py
backend/tests/test_event/: conftest.py  test_00_test_event.py
backend/tests/test_user/: conftest.py  test_00_send_code.py  test_01_verify_code.py
backend/users/: admin.py  apps.py  manager.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py  views2.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_calendar.py  0002_user_is_staff_user_is_superuser.py  0002_user_show_slash_events_user_show_star_events.py  0003_alter_user_calendar.py  (+7 more)
(+28 files in other folders)
